# in204-tetris

./: CMakeLists.txt  README.md  config.ini  remove_portproxy.bat  setup_portproxy.bat
.cache/clangd/index/: Board.cpp.03F283641DEF1441.idx  Board.h.3DA2EBB6665A26F5.idx  GameController.cpp.AC4037E88247AA4C.idx  GameController.h.95BFC6F882AEA541.idx  GameState.cpp.6734D84A00E470B3.idx  GameState.h.ABE7A20CE7AFF823.idx  GameView.cpp.19979791F9625651.idx  GameView.h.FCE5FD661CB25677.idx  InputHandler.cpp.A8EC948511FF9401.idx  InputHandler.h.2E8B42F10A59E0C3.idx  (+11 more)
src/: ConfigManager.cpp  ConfigManager.h  main.cpp
src/ai/: AIPlayer.cpp  AIPlayer.h  AdvancedAI.cpp  AdvancedAI.h  SimpleAI.cpp  SimpleAI.h
src/controller/: GameController.cpp  GameController.h  InputHandler.cpp  InputHandler.h
src/model/: AIMode.cpp  AIMode.h  Board.cpp  Board.h  DeathrunMode.cpp  DeathrunMode.h  GameMode.h  GameState.cpp  GameState.h  Level.cpp  Level.h  LevelBasedMode.cpp  LevelBasedMode.h  MultiplayerMode.cpp  MultiplayerMode.h  Score.cpp  Score.h  Tetromino.cpp  Tetromino.h  board.cpp  board.h  piece_rotation.cpp  piece_rotation.h  tetromino.cpp  tetromino.h
src/network/: InternetConnectivity.cpp  InternetConnectivity.h  Message.cpp  Message.h  MultiplayerEngine.cpp  MultiplayerEngine.h  NetworkConfig.cpp  NetworkConfig.h  NetworkManager.cpp  NetworkManager.h  NetworkSession.cpp  NetworkSession.h  NetworkThread.cpp  NetworkThread.h
src/view/: GameView.cpp  GameView.h  MenuView.cpp  MenuView.h  MusicManager.cpp  MusicManager.h  TextureManager.cpp  TextureManager.h
